Fix scroll problem on Firefox

--- a/static/app/css/main.css
+++ b/static/app/css/main.css
@@ -14,8 +14,9 @@ body{
     display: none;
 }
 #left {
-    height: -webkit-fill-available;
-    height: -moz-available;
+    /*height: -webkit-fill-available;*/
+    /*height: -moz-available;*/
+    height: 100%;
     position: fixed;
     top: 50px;
     width: 200px;
@@ -58,8 +59,9 @@ body{
     position: absolute;
     right: 0;
     top: 60px;
-    height: -webkit-fill-available;
-    height: -moz-available;
+    /*height: -webkit-fill-available;*/
+    /*height: -moz-available;*/
+    height: 100%;
     width: calc(100% - 200px);
     border-radius: 20px 20px 0 0;
     background-color: rgba(255, 255, 255, 0.3);
